--- a/application/views/scripts/password/password.phtml
+++ b/application/views/scripts/password/password.phtml
@@ -9,8 +9,8 @@ $params = $this->request->getParams();
 
 if ($auth->hasIdentity()):
 ?>
-<div class="yui-ge">
-<div class="yui-u first">
+<div class="row">
+<div class="span12">
 <?php
 endif;
 
@@ -39,7 +39,7 @@ if ($auth->hasIdentity() && (!isset($params['confirm_uid']) ||
  $params['confirm_uid'] == $auth->getIdentity())):
 ?>
 </div>
-<div class="yui-u accountside">
+<div class="span3">
 <?php echo $this->partial("/account/menu.phtml"); ?>
 </div>
 </div>
