--- a/application/views/scripts/static/about.phtml
+++ b/application/views/scripts/static/about.phtml
@@ -24,11 +24,11 @@ $this->headTitle("About Plifk", "SET");
 
 <h3>Plifk visual identity</h3>
 <h4>Logo</h4>
-<div class="yui-gd">
-<div class="yui-u first">
+<div class="row">
+<div class="span6">
 <img src="<?php echo $this->staticversion("/images/logo-m.png") ?>" width="302" height="227" alt="Plifk's logo" />
 </div>
-<div class="yui-u">
+<div class="offset2 span7">
 <h5>How to use</h5>
 <p>Don't do any modifications to colors or anything else such as customizing the font.<br /><br />
 Plifk is <b>#000000</b> (plain black) and the symbol with out the pencil head is color <b>#29ABE2</b>.<br />
@@ -42,11 +42,11 @@ The font used for the typography is <b>Leelawadee Regular</b>. Concept by Diego 
 </div>
 </div>
 <h4>Symbol</h4>
-<div class="yui-gd">
-<div class="yui-u first">
+<div class="row">
+<div class="span6">
 <img src="<?php echo $this->staticversion("/images/symbol-m.png") ?>" width="302" height="236" alt="Plifk's symbol" />
 </div>
-<div class="yui-u">
+<div class="offset2 span7">
 <h5>How to use</h5>
 <p>This symbol should be used alone or at the left side (never the right) of the word Plifk or another phrase related.  The .svg symbol contains transparency. The visual elements in it are considered to be in front of a plain white background.</p>
 <h5>Sizes:</h5>
