--- a/application/views/scripts/credits/credits.phtml
+++ b/application/views/scripts/credits/credits.phtml
@@ -6,8 +6,8 @@ $this->headTitle("Your account balance / Add funds");
 $signedUserInfo = $registry->get("signedUserInfo");
 
 ?>
-<div class="yui-ge">
-<div class="yui-u first">
+<div class="row">
+<div class="span12">
 <h2>Your account balance / Add funds</h2>
 <?php
 if ($this->transactionId):
@@ -22,7 +22,7 @@ if ($this->transactionId):
 <h3>If you have got a gift card or coupon code</h3>
 <?php echo $this->redeemForm ?>
 </div>
-<div class="yui-u accountside">
+<div class="span3">
 <?php echo $this->partial("/account/menu.phtml"); ?>
 </div>
 </div>
