--- a/application/views/scripts/error/error.phtml
+++ b/application/views/scripts/error/error.phtml
@@ -25,30 +25,13 @@ if ($this->statusCode == 404 && isset($_SERVER['REQUEST_URI'])) {
 }
 
 ?>
-<?php if ('development' == APPLICATION_ENV): ?>
-<div class="yui-g">
-<div class="yui-u first">
-<h2>Exception information:</h2>
-<p><b>Message:</b> <?php echo $this->escape($this->exception->getMessage()); ?> 
-</p>
-</div>
-<div class="yui-u">
-<h3>Request Parameters:</h3>
-<pre><?php echo var_export($this->request->getParams(), true); ?></pre>
-</div>
-<h3>Stack trace:</h3>
-<pre><?php echo str_replace(array(": ", "#"), array(":<br />   ", "<br />#"), $this->escape($this->exception->getTraceAsString())); ?></pre>
-</div>
-<?php endif; ?>
 <h2><?php echo $headtitle; ?></h2>
 <?php if ($this->statusCode == 404): ?>
 <p>The page you tried to access does not exists.</p>
 <?php if (isset($userInfo) && is_array($userInfo)): ?>
-<p><strong>Do you want to browser <a
-	href="<?php
+<p><strong>Do you want to browser <a href="<?php
 echo $this->url(array("username" => $userInfo['alias']), "filestream_1stpage");
-?>"
-	title="<?php
+?>" title="<?php
 echo $this->escape($userInfo['name']);?> files"><?php
 echo $this->escape($userInfo['name']); ?></a>'s contents?</strong></p>
 <?php endif; ?>
@@ -56,3 +39,18 @@ echo $this->escape($userInfo['name']); ?></a>'s contents?</strong></p>
 <p>There was an application error.</p>
 <?php
 endif;
+if ('development' == APPLICATION_ENV): ?>
+<div class="row">
+<div class="span9">
+<h3>Exception information:</h3>
+<p><b>Message:</b> <?php echo $this->escape($this->exception->getMessage()); ?> 
+</p>
+</div>
+<div class="span6">
+<h3>Request Parameters:</h3>
+<pre class="prettyprint"><?php echo var_export($this->request->getParams(), true); ?></pre>
+</div>
+</div>
+<h3>Stack trace:</h3>
+<pre class="prettyprint"><?php echo str_replace(array(": ", "#"), array(":<br />   ", "<br />#"), $this->escape($this->exception->getTraceAsString())); ?></pre>
+<?php endif; ?>
