--- a/application/views/scripts/filepage/filepage.phtml
+++ b/application/views/scripts/filepage/filepage.phtml
@@ -1,4 +1,5 @@
 <?php
+// @todo update the number of favorited times when the user favorites / unfavorites
 $registry = Zend_Registry::getInstance();
 $auth = Zend_Auth::getInstance();
 
@@ -8,171 +9,89 @@ $userInfo = $registry->get('userInfo');
 
 $this->headTitle($this->escape($shareInfo['title']), "PREPEND");
 
-$downloadLink =
- $this->escape($config['services']['S3']['sharesBucketAddress'] .
- $userInfo['alias'] . "/" . $shareInfo['id'] . "-" .
- $shareInfo['download_secret'] . "/" . $shareInfo['filename']);
-
 $favorites = Ml_Model_Favorites::getInstance();
-$countFavorites = $favorites->count($shareInfo['id']);
+//$countFavorites = $favorites->count($shareInfo['id']);
+
+$tags = Ml_Model_Tags::getInstance();
+
+$date = new Zend_Date();
+$date->set($shareInfo['uploadedTime'], Zend_Date::ISO_8601);
 ?>
-<div class="yui-gc">
-<div class="yui-u first">
-<h2><?php echo $this->escape($shareInfo['title']); ?></h2>
-</div>
-<div class="yui-u">
-<p><small>Jump to <span class="hidden-from-gui"><a href="#download-link">download
-link and metadata</a>, </span><a href="#comments">comments</a>. 
-<?php if ($auth->getIdentity() != $shareInfo['byUid']): ?>
-<span id="shareFavorite"><?php echo $this->render("favorites/switch.phtml"); ?></span>
+<div class="row">
+<div class="span4">
+<h3><?php echo $this->escape($shareInfo['title']); ?></h3>
+<a href="<?php echo $this->downloadLink($shareInfo, $userInfo); ?>" class="btn primary"><?php echo $this->escape($shareInfo['filename']); ?> (<?php echo $this->fileSize($shareInfo['fileSize'], true); ?>)</a>
+<?php if ($shareInfo['short']) {
+    echo "<p>" . $this->escape($shareInfo['short']) . "</p>";
+}
+?>
+<ul class="file-info">
+<li><?php echo $date->get(Zend_Date::DATE_LONG); ?></li>
+<li>File-Type: <?php echo $this->escape($shareInfo['type']); ?></li>
+<li><a href="<?php echo $this->url(array("username" => $userInfo['alias'],
+    "share_id" => $shareInfo['id']), "favorites_1stpage"); ?>">Favorites</a></li>
+</ul>
+<div id="TagList">
+<?php if (! empty($this->tagsList) || $auth->getIdentity() == $userInfo['id']): ?>
+<h5>Tags</h5>
+<ul id="thetags">
+<?php echo $this->render("tags/tags.phtml") ?>
+</ul>
+<?php 
+if ($auth->getIdentity() == $userInfo['id']) {
+    $tagsForm = $tags->form();
+    
+    $tagsForm->setAttrib("id", "tags-form");
+    
+    echo $tagsForm;
+}
+?>
 <?php endif; ?>
-</small></p>
 </div>
 </div>
-<div class="yui-gc">
-<div class="yui-u first">
+<div class="span7">
+<h3 class="hidden">File description</h3>
 <p id="description" class="somehtml">
 <?php if ($shareInfo['description_filtered']): ?>
 <?php echo $shareInfo['description_filtered']; ?>
 <?php else: ?>
-<small class="nodescr">(No description)</small>
+<small class="nodescr">(No file description)</small>
 <?php endif; ?>
 </p>
-<hr title="End of description" />
 <?php echo $this->render("shares/comments.phtml"); ?>
 </div>
-<div class="yui-u" id="metasidebar">
-<ul id="downloadlinks">
-	<li class="main" id="download-link"><a
-		href="<?php echo $downloadLink; ?>" rel="nofollow">Download</a></li>
+<div class="span3 offset1">
+<h3>Actions</h3>
 <?php
-/*
- * Torrent is not worth yet and is destroying the layout
- * <li><a href="<?php echo $downloadLink; ?>?torrent">torrent</a></li>
-*/
+if ($auth->getIdentity() == $shareInfo['byUid']) {
 ?>
-</ul>
-<table id="file-metadata">
-	<tbody>
-<?php 
-$date = new Zend_Date(); $date->set($shareInfo['uploadedTime'], Zend_Date::ISO_8601);
-$shortlink = $this->escape(Ml_Model_Numbers::base58Encode($config['URLshortening']['addr'] . $shareInfo['id']));
-$metadata = array(
-"Filename" => $this->escape($shareInfo['filename']),
-"Size" => $this->fileSize($shareInfo['fileSize'], true),
-"File-Type" => $this->escape($shareInfo['type']),
-"Published" => $date->get(Zend_Date::DATE_LONG),
-"Privacy" => "Public available",
-"MD5 fingerprint" => "<code class=\"md5sum\">" . $this->escape($shareInfo['md5']) . "</code>",
-"Short Link" => '<span class="x-small-font">' . $shortlink . "</span>");
-
-//if the filename is too big, use a smaller font
-$filenameStringLenght = mb_strlen($metadata['Filename']);
-
-if ($filenameStringLenght > 30) {
-    if ($filenameStringLenght > 35) {
-        $filenameStringFont = "xx-small-font";
-    } else {
-        $filenameStringFont = "x-small-font";
-    }
-    
-    $metadata['Filename'] =
-    '<span class="' . $filenameStringFont . '">' . $metadata['Filename'] . "</span>";
-}
-
-/* @begin of in filestream.phtml also */
-switch ($shareInfo['type']) {
-    case "application/x-msdownload" : case "application/x-msdos-program" :
-    $metadata['File-Type'] =
-    '<span title="' . $metadata['File-Type'] .  '" class="warning">Windows executable</span>';
-        break;
-    default :
-        $filetypeStringLenght = mb_strlen($metadata['File-Type']);
-        
-        if ($filetypeStringLenght > 25) {
-            $metadata['File-Type'] = '<span class="xx-small-font">' . $metadata['File-Type'] ."</span>";
-        } else if ($filetypeStringLenght > 16) {
-            $metadata['File-Type'] = '<span class="x-small-font">' . $metadata['File-Type'] ."</span>";
-        }
-        break;
-}
-/* @end of in filestream.phtml also */
-
-//virus scanned: never
-//views
-if ($countFavorites) {
-    $favkey = '<a href="'. $this->url(array("username" => $userInfo['alias'],
-    "share_id" => $shareInfo['id']), "favorites_1stpage") .'">Favorites</a>';
-    
-    $pluralOrNot = ($countFavorites>1) ? 's' : '';
-    $metadata[$favkey] = $countFavorites." time".$pluralOrNot." favorited";
-}
-
-foreach ($metadata as $key => $value):
-?>
-<tr
-			class="<?php echo $this->cycle(array("even", "odd"), "metadata")->next() ?>">
-			<td class="key"><?php echo $key ?></td>
-			<td class="value"><?php echo $value ?></td>
-		</tr>
-<?php
-endforeach;
-?>
-</tbody>
-</table>
-<?php
-if ($auth->getIdentity() == $shareInfo['byUid']):
-?>
-<ul id="sharemaster">
-	<li class="edit"><a
-		href="<?php
+<a href="<?php
 echo $this->url(array("username" => $userInfo['alias'], "share_id" => $shareInfo['id']),
-"editsharepage");
-?>"
-		rel="nofollow">Edit info</a></li>
-	<li class="delete"><a
-		href="<?php
+"editsharepage");?>" class="btn primary small" rel="nofollow">Edit info</a>
+<a href="<?php
 echo $this->url(array("username" => $userInfo['alias'],
 "share_id" => $shareInfo['id']), "deleteshare");
-?>"
-		title="Delete this file" rel="nofollow">Delete ✖</a></li>
-</ul>
-<?php endif; ?>
-<div class="shortdesc">
-<h3>Short description</h3>
-<p><?php
-
-if ($shareInfo['short']) {
-    echo $this->escape($shareInfo['short']);
-} else {
-    echo '<small class="nodescr">(No short description available)</small>';
-}
-
-?></p>
-</div>
+?>" title="Delete this file" class="btn danger small" rel="nofollow">Delete file</a>
 <?php
-if($this->twitterForm):
+}
+?>
+<?php if ($auth->getIdentity() != $shareInfo['byUid']): ?>
+<span id="shareFavorite"><?php echo $this->render("favorites/switch.phtml"); ?></span>
+<?php endif; ?>
+<hr class="lighten" />
+<p><small>Short link: <?php echo $this->escape($this->shortLink($shareInfo['id'])); ?><br />
+md5 checksum of the file: <?php echo $this->escape($shareInfo['md5']); ?></small></p>
+<?php
+if ($this->twitterForm) {
 $this->twitterForm->getElement("tweet")->getDecorator("description")->setEscape(false);
-
 ?>
 <div id="tweet-box">
-<h3>Share with your Twitter followers</h3>
 <?php echo $this->twitterForm->setAttrib("id", "tweet-form") ?>
 <div id="twitter-servicemsg"></div><?php //don't use <div /> ?>
 </div>
-<?php endif; ?>
-<div id="TagList">
-<?php if (!empty($this->tagsList) || $auth->getIdentity() == $userInfo['id']): ?>
-<h3>Tags</h3>
-<ul id="thetags">
-<?php echo $this->render("tags/tags.phtml") ?>
-</ul>
 <?php
-if ($auth->getIdentity() == $userInfo['id']) {
-    echo Ml_Model_Tags::form()->setAttrib("id", "tags-form"); 
 }
 ?>
-<?php endif; ?>
 </div>
 </div>
-</div>
+<?php echo $this->paginator; ?>
